bad/incr_field_array_fcall.example_compiler_output
ERROR
[1mbad/incr_field_array_fcall.lat:8:11: [1;31merror: [0;1m++ operator is valid only for integer values not `int[]`[m
	foo().fld++;
	         [1;32m^[m
